--- a/index.html
+++ b/index.html
@@ -8,41 +8,41 @@
   <body>
     <div class="header">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="about" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="main">
       <p id="topSectionForAddingElementToList">
-        <label for="new-task">Add Item</label>
+        <label class="new-task__label" for="new-task">Add Item</label>
         <div class="task__wrapper">
-          <input id="new-task" class="task" type="text">
-          <button>Add</button>
+          <input id="new-task" class="task new_task input" type="text">
+          <button class="btn">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
+      <h3 class="list_title">Todo</h3>
+      <ul class="task_list" id="incompleteTasks">
+        <li class="task_item">
           <input type="checkbox">
           <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <input type="text" class="task input">
+          <button class="btn edit">Edit</button>
+          <button class="btn delete"><img src="./remove.svg"></button>
         </li>
-        <li class="editMode">
+        <li class="task_item editMode">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <input type="text" value="Go Shopping" class="task input">
+          <button class="btn edit">Save</button>
+          <button class="btn delete"><img src="./remove.svg"></button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
+      <h3 class="list_title">Completed</h3>
+      <ul class="task_list" id="completed-tasks">
+        <li class="task_item">
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <input type="text" class="task input">
+          <button class="btn edit">Edit</button>
+          <button class="btn delete"><img src="./remove.svg"></button>
         </li>
       </ul>
     </div>
