--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         </li>
       </ul>
       <h3 class="list_title">Completed</h3>
-      <ul class="task_list" id="completed-tasks">
+      <ul class="task_list completed_list" id="completed-tasks">
         <li class="task_item">
           <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
+          <label class="task completed-label">See the Doctor</label>
           <input type="text" class="task input">
           <button class="btn edit">Edit</button>
           <button class="btn delete"><img src="./remove.svg"></button>
