--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         <li class="task_item">
           <input type="checkbox">
           <label class="task">Pay Bills</label>
-          <input type="text" class="task input">
+          <input type="text" class="task input text_input">
           <button class="btn edit">Edit</button>
           <button class="btn delete"><img src="./remove.svg"></button>
         </li>
         <li class="task_item editMode">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task input">
+          <input type="text" value="Go Shopping" class="task input text_input">
           <button class="btn edit">Save</button>
           <button class="btn delete"><img src="./remove.svg"></button>
         </li>
@@ -40,7 +40,7 @@
         <li class="task_item">
           <input type="checkbox" checked>
           <label class="task completed-label">See the Doctor</label>
-          <input type="text" class="task input">
+          <input type="text" class="task input text_input">
           <button class="btn edit">Edit</button>
           <button class="btn delete"><img src="./remove.svg"></button>
         </li>
