--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
       <h3 class="list_title">Todo</h3>
       <ul class="task_list" id="incompleteTasks">
         <li class="task_item">
-          <input type="checkbox">
+          <input class="checkbox_input" type="checkbox">
           <label class="task">Pay Bills</label>
           <input type="text" class="task input text_input">
           <button class="btn edit">Edit</button>
-          <button class="btn delete"><img src="./remove.svg"></button>
+          <button class="btn delete"><img class="icon_btn" src="./remove.svg"></button>
         </li>
         <li class="task_item editMode">
-          <input type="checkbox">
+          <input class="checkbox_input" type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task input text_input">
           <button class="btn edit">Save</button>
-          <button class="btn delete"><img src="./remove.svg"></button>
+          <button class="btn delete"><img class="icon_btn" src="./remove.svg"></button>
         </li>
       </ul>
       <h3 class="list_title">Completed</h3>
       <ul class="task_list completed_list" id="completed-tasks">
         <li class="task_item">
-          <input type="checkbox" checked>
+          <input class="checkbox_input" type="checkbox" checked>
           <label class="task completed-label">See the Doctor</label>
           <input type="text" class="task input text_input">
           <button class="btn edit">Edit</button>
-          <button class="btn delete"><img src="./remove.svg"></button>
+          <button class="btn delete"><img class="icon_btn" src="./remove.svg"></button>
         </li>
       </ul>
     </div>
