--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="header">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
       <a class="about" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
@@ -25,14 +25,14 @@
           <label class="task">Pay Bills</label>
           <input type="text" class="task input text_input">
           <button class="btn edit">Edit</button>
-          <button class="btn delete"><img class="icon_btn" src="./remove.svg"></button>
+          <button class="btn delete"><img class="icon_btn" src="./remove.svg" alt="delete"></button>
         </li>
         <li class="task_item editMode">
           <input class="checkbox_input" type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task input text_input">
           <button class="btn edit">Save</button>
-          <button class="btn delete"><img class="icon_btn" src="./remove.svg"></button>
+          <button class="btn delete"><img class="icon_btn" src="./remove.svg" alt="delete"></button>
         </li>
       </ul>
       <h3 class="list_title">Completed</h3>
@@ -42,7 +42,7 @@
           <label class="task completed-label">See the Doctor</label>
           <input type="text" class="task input text_input">
           <button class="btn edit">Edit</button>
-          <button class="btn delete"><img class="icon_btn" src="./remove.svg"></button>
+          <button class="btn delete"><img class="icon_btn" src="./remove.svg" alt="delete"></button>
         </li>
       </ul>
     </main>
